[package]
name = "colconv"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/findit-ai/colconv"
homepage = "https://github.com/findit-ai/colconv"
documentation = "https://docs.rs/colconv"
description = "SIMD-dispatched per-row color-conversion kernels covering the FFmpeg AVPixelFormat space, with a Sink-based API so consumers pick which derived outputs (BGR / Luma / HSV / custom) they want without paying for the ones they don't."
license = "MIT OR Apache-2.0"
rust-version = "1.95.0"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = ["libm"]
std = ["thiserror/default"]

[dependencies]
derive_more = { version = "2", default-features = false, features = ["display", "is_variant"] }
thiserror = { version = "2", default-features = false }
libm = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
